objects/Case.object
<CustomObject>
    <fields>
        <fullName>Case_Category__c</fullName>
        <label>Case Category</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>AVS recap requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accuracy Issues/Re-Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Routes for Shopping Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin tools sitesup (for airline dropdown)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM-related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEN Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AirCAT Exclusion of Carriers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline dropdown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amadeus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anything geography specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baggage allowance changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BFS Codeshare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking class configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier activation/deactivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier mis-filing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changes to eligible for ticketing: airline, fare type,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creation, modify, delete, closure of queues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit card acceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Re_Opened_By__c</fullName>
        <label>Case Re-Opened By</label>
        <picklist>
            <picklistValues>
                <fullName>Aaron Distler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abdal Nasir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adam Simpson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ada Murillo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adrianna Johnson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adrienne Williams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahlam Holikova</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airi Kato</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aishah Saktawi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alex Kim Changkok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alicia von Leeb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alizicia Booker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allison Sharp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alyson Crisp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amanda Lowther</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber Dover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber Gray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amy Burnett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ana Corujo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrea Allen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrea Ratliff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrew Wimbish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angela Berry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angela Besanceney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angela Edwards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angela Tolbert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angelita Martinez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angel Tarrant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anicka Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anisha Bedell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chain__c</fullName>
        <label>Chain</label>
        <referenceTo>Chain__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Account_Lookup_Results__c</fullName>
        <description>Shows the results of the contact/account matching logic for cases created via inbound email or web intake form</description>
        <label>Contact/Account Lookup Results</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contacts_Entered_Date__c</fullName>
        <description>Date tracking when contacts were entered</description>
        <label>Contacts Entered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DS_Number_of_Offerings__c</fullName>
        <description>Number of Offerings - Destination Services</description>
        <label>Number of Offerings</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Case_Was_Re_Opened__c</fullName>
        <label>Date Case Was Re-Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Decision__c</fullName>
        <label>Date of Decision</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Request__c</fullName>
        <label>Date of Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_photos_content_went_live__c</fullName>
        <description>Date photos &amp; content went live</description>
        <label>Date photos &amp; content went live</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declined_Amount_in_USD__c</fullName>
        <label>Declined Amount in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Department making the request</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>GSO - Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSO - Lodging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSO - Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSO - Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSO - PMSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSO - GLO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description_Rich_Text__c</fullName>
        <description>Rich text field to hold an inbound email&apos;s html body to preserve any rich text formatting.</description>
        <label>Description (Rich Text)</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dispute_Amount__c</fullName>
        <label>Dispute Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EEM_Activation_SLA__c</fullName>
        <description>Difference between Activated Date and To Train Date for EEM Activation and Training Case</description>
        <formula>Activated_Date__c - To_Train_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EEM Activation SLA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Earliest_Guest_Arrival__c</fullName>
        <inlineHelpText>Check-in dates may vary in a single case; this field represents the earliest check-in date for guests associated with the case.</inlineHelpText>
        <label>Earliest Guest Arrival</label>
        <summarizedField>Guest__c.Arrival_Date__c</summarizedField>
        <summaryForeignKey>Guest__c.Case__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Email_Button__c</fullName>
        <description>Email button to Auto populate From Address</description>
        <formula>CASE($RecordType.DeveloperName, 
&quot;Destination_Services&quot;, &quot;dsmaint@expedia.com&quot;, 
&quot;Geography&quot;, &quot;geosup@expedia.com&quot;, 
&quot;HDM&quot;, &quot;hdm@expedia.com&quot;, 
&quot;Star_Ratings&quot;, &quot;ratings@expedia.com&quot;, 
&quot;Media_Content&quot;, &quot;hotelphotos@expedia.com&quot;, 
&quot;Virtual_Tours_Content&quot;, &quot;expevt@expedia.com&quot;, 
&quot;Lodging_Content&quot;, &quot;content@expedia.com&quot;, 
&quot;User_Generated_Content&quot;, &quot;staging.ugc@g-6jlv4vzdrpmcia6zyiqs063km.mcsk1mac.m.apex.sandbox.salesforce.com&quot;, 
&quot;Localisation&quot;, &quot;staging.localisation@s-t2hp6ukjee7hxvlzarra9t3a.mcsk1mac.m.apex.sandbox.salesforce.com&quot;, 
&quot;support@expedia.com&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Button</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Recipients__c</fullName>
        <label>Email Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Begin_Date__c</fullName>
        <label>Error Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Fix_Date__c</fullName>
        <label>Error Fix Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Express_Case_Id__c</fullName>
        <description>This is the ID of the case as originally created in Express.</description>
        <inlineHelpText>This is the ID of the case as originally created in Express.</inlineHelpText>
        <label>Express Case Id</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Review_Notes__c</fullName>
        <label>External Review Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GSO_Contract__c</fullName>
        <label>GSO Contract</label>
        <referenceTo>GSOContract__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Google_Translate__c</fullName>
        <label>Google Translate</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Guest_Priority__c</fullName>
        <description>Priority for Lodge Ops - HPS Cases where guests are involved.</description>
        <label>Guest Priority</label>
        <picklist>
            <picklistValues>
                <fullName>72 Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Reservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Priority Based on Guest Record</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Outstanding_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Outstanding Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ids_Requested__c</fullName>
        <description>Used to indicate the types of IDs requested when an ID creation case is created (based on the current ID values for the account).</description>
        <label>Ids Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Expedia Hotel ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expedia Vendor ID</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Include_All_Bookings__c</fullName>
        <label>Include All Bookings?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incorrect_Transfer_SR_T2_3_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incorrect Transfer (SR T2/3 only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Reporting_Decision__c</fullName>
        <label>Internal Reporting Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Contract Rate/Promo/Tax/Canx Loading Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPay Invoiced Incorrectly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVC Bookings Invoiced Incorrectly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud Dispute Reversed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel Waived Reversed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insert Options from Spreadsheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Processing Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promo - Full Rate Approved by PSG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSG Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Banking Affidavit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Invoicing Error Approved by PSG Finance VP and VP Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Invoicing Error Recommended by MM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <label>Investigation</label>
        <picklist>
            <picklistValues>
                <fullName>Initial Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Chaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Chaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Chaser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending MM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Argent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Responsive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Involved__c</fullName>
        <label>Involved</label>
        <picklist>
            <picklistValues>
                <fullName>Air CPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CarOps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fare Filing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Fulfillment Process &amp; Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticketing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Chaser_Email_Sent_Date__c</fullName>
        <description>Tracks the last date a chaser email was sent. Looks at the chaser activity custom object</description>
        <label>Last Chaser Email Sent Date</label>
        <summarizedField>Chaser_Activity__c.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>Chaser_Activity__c.How_Contacted__c</field>
            <operation>equals</operation>
            <value>Email</value>
        </summaryFilterItems>
        <summaryForeignKey>Chaser_Activity__c.Case__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Chaser_Phone_Call_Date__c</fullName>
        <description>Tracks the last date a chaser phone call was made</description>
        <label>Last Chaser Phone Call Date</label>
        <summarizedField>Chaser_Activity__c.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>Chaser_Activity__c.How_Contacted__c</field>
            <operation>equals</operation>
            <value>Phone Call</value>
        </summaryFilterItems>
        <summaryForeignKey>Chaser_Activity__c.Case__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Commented_On__c</fullName>
        <description>The date the last case comment was created.  Can be included in reports in conjunction with Last Modified to show the date the case was most recently active.</description>
        <label>Last Commented On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change__c</fullName>
        <description>Stores the last time the status changed -- used by the Case Business Hours Tools package.</description>
        <label>Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <description>T shirt size of how much effort task will be</description>
        <inlineHelpText>Small &lt; 1 hour
Medium 1 - 8 hours
Large 8 - 20 hours
Extra Large &gt; 20 hours</inlineHelpText>
        <label>Level of Effort</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra Large</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lodging_Operations_Agent__c</fullName>
        <label>Lodging Operations Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Management_s_Decision__c</fullName>
        <label>Management&apos;s Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Met_SLA__c</fullName>
        <description>Was SLA met?</description>
        <inlineHelpText>Was SLA met?</inlineHelpText>
        <label>Met SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Method_Detail__c</fullName>
        <label>Method Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Current Invoice Fax #</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exppayload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SR E-mail Alias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SR Fax #</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitinvoice or Domesticbilling Alias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uploaded to ExpediaPay</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Method_of_Submittal__c</fullName>
        <label>Method of Submittal</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Bookings__c</fullName>
        <label>No. of Bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Responsive_Date__c</fullName>
        <description>Date tracking when property set to non responsive</description>
        <label>Non Responsive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Changes__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of changes; added for user to manually quantify the number of changes requested.  Defaults to 1.</description>
        <inlineHelpText>HDM = Number of Changes
Media &amp; Lodging Content = Number of Properties/Updates</inlineHelpText>
        <label>Number of Properties/Updates</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Chaser_Emails__c</fullName>
        <description>Tracks how many chaser emails have been sent counting the chaser activity custom object</description>
        <label>Number of Chaser Emails</label>
        <summaryFilterItems>
            <field>Chaser_Activity__c.How_Contacted__c</field>
            <operation>equals</operation>
            <value>Email</value>
        </summaryFilterItems>
        <summaryForeignKey>Chaser_Activity__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Chaser_Phone_Calls__c</fullName>
        <description>Tracks how many chaser phone calls have been made. Counts the chaser activity custom object</description>
        <label>Number of Chaser Phone Calls</label>
        <summaryFilterItems>
            <field>Chaser_Activity__c.How_Contacted__c</field>
            <operation>equals</operation>
            <value>Phone Call</value>
        </summaryFilterItems>
        <summaryForeignKey>Chaser_Activity__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OFID__c</fullName>
        <label>OFID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Name__c</fullName>
        <label>Offer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <inlineHelpText>Use this field to add the Offer SKU description to Destination Services cases</inlineHelpText>
        <label>Offer</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <label>Office Location</label>
        <picklist>
            <picklistValues>
                <fullName>AMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kuala Lumpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Springfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dallas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operational_Unit__c</fullName>
        <label>Operational Unit</label>
        <picklist>
            <picklistValues>
                <fullName>FinOps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kuala Lumpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teleperformance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Invoiced_Date__c</fullName>
        <label>Original Invoiced Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Invoicing_Method__c</fullName>
        <label>Original Invoicing Method</label>
        <picklist>
            <picklistValues>
                <fullName>Electronic/EPay or DMX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail/Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax/Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail/Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSG_Case_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>external Id from PSG</description>
        <externalId>true</externalId>
        <label>PSG Case Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PSG_Case_Number__c</fullName>
        <label>PSG Case Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_Owner_Email__c</fullName>
        <description>Email of the PSG Owner</description>
        <label>PSG Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PSG_Owner_Name__c</fullName>
        <description>Name for the Owner of the case in PSG</description>
        <label>PSG Owner Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_Record_Type__c</fullName>
        <description>Developer name for PSG Record Type</description>
        <label>PSG Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Assigned_To__c</fullName>
        <label>PS Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <label>Path</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Packages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standalone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>